[gd_scene load_steps=37 format=3 uid="uid://cslxdpy0nnjui"]

[ext_resource type="Script" uid="uid://sj2d1pxvwrlq" path="res://enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://n3jt31qt271s" path="res://assets/enemies/sigbin/sigbin_idle.png" id="2_iifgy"]
[ext_resource type="Texture2D" uid="uid://d2hpitub184bb" path="res://assets/enemies/sigbin/sigbin_walk.png" id="3_epg4t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_iifgy")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_iifgy")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_iifgy")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_iifgy")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_iifgy")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_iifgy")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("2_iifgy")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("2_iifgy")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("2_iifgy")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("2_iifgy")
region = Rect2(1728, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("3_epg4t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("3_epg4t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("3_epg4t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("3_epg4t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("3_epg4t")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("3_epg4t")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("3_epg4t")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("3_epg4t")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbtr"]
atlas = ExtResource("3_epg4t")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdfx"]
atlas = ExtResource("3_epg4t")
region = Rect2(1728, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qku5p"]
atlas = ExtResource("3_epg4t")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1fjw"]
atlas = ExtResource("3_epg4t")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5wqg"]
atlas = ExtResource("3_epg4t")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgro5"]
atlas = ExtResource("3_epg4t")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rq2"]
atlas = ExtResource("3_epg4t")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdwq"]
atlas = ExtResource("3_epg4t")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgdh"]
atlas = ExtResource("3_epg4t")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wg26"]
atlas = ExtResource("3_epg4t")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qskgw"]
atlas = ExtResource("3_epg4t")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3onx"]
atlas = ExtResource("3_epg4t")
region = Rect2(1728, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_o707m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}],
"loop": true,
"name": &"sigbin_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdfx")
}],
"loop": true,
"name": &"sigbin_run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qku5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1fjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5wqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wg26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qskgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3onx")
}],
"loop": true,
"name": &"sigbin_walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_difxq"]
size = Vector2(78, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tv8x"]
size = Vector2(215, 20)

[node name="Enemy" type="RigidBody2D"]
collision_mask = 3
lock_rotation = true
script = ExtResource("1_qi2p4")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o707m")
animation = &"sigbin_idle"
autoplay = "sigbin_idle"
frame_progress = 0.159413

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 29.5)
shape = SubResource("RectangleShape2D_difxq")

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(79.5, 14)
shape = SubResource("RectangleShape2D_5tv8x")
debug_color = Color(0.954585, 2.79158e-06, 0.547659, 0.42)

[node name="PatrolTimer" type="Timer" parent="."]

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2(48, 36)
rotation = -1.5708
target_position = Vector2(0, 30)
collide_with_areas = true

[node name="FloorRayCast" type="RayCast2D" parent="."]
position = Vector2(-63, 53)
target_position = Vector2(0, 20)
collision_mask = 3

[node name="FloorRayCast2" type="RayCast2D" parent="."]
position = Vector2(54, 53)
target_position = Vector2(0, 20)
collision_mask = 3
